--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,33 @@
 html{
     scroll-behavior: smooth;
 }
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
+}
+
+.typinganimation {
+  overflow: hidden;
+  border-right: 0.15em solid white;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation: typing 2s steps(20, end), blink-caret 0.75s step-end infinite;
+}
+
 
 h1>a>.icon.icon-link:before,
 h2>a>.icon.icon-link:before,
@@ -81,3 +108,4 @@ code {
   }
 
 
+  
